--- a/LAB1/style1.css
+++ b/LAB1/style1.css
@@ -15,12 +15,12 @@ p {
     font-weight: 700;
     text-transform: uppercase;
 }
-
-
-
+.table1{
+    border: 1px dashed;
+}
 table {
     border-collapse: collapse;
-    border: 1px dashed rgb(140 140 140);
+    border: 1px solid rgb(140 140 140);
     width: 100%;
 }
 th, td {
@@ -38,7 +38,7 @@ tbody {
     text-align: left;
 }
 tbody th, td {
-  border: 1px dashed rgb(160 160 160);
+  border: 1px solid rgb(160 160 160);
 }
 
 tfoot {
